# midi-macro

./: .gitignore  MidiFighter3D.spec  PACKAGING.md  PYTEST_PLAN.md  README.md  config.yaml  flake.nix  main.py  pyproject.toml  requirements.txt  session-ses_3b02.md  shell.nix  test_mf3d.py
config/: main.yaml
config/banks/: automation.yaml  bass.yaml  drums.yaml  synth.yaml
scripts/: copy_quote.sh  get_ip.sh  get_joke.sh  get_space_fact.sh  get_useless_fact.sh  get_weather.sh  hello.sh  screenshot.sh  system_info.sh
src/: action_runner.py  bank_manager.py  main.py  midi_handler.py  midi_types.py  soundboard.py
src/gui/: __init__.py  main_window.py  midi_button.py  midi_button_enhanced.py  styles.py  tty_display.py  visualizer.py  visualizer_pyqtgraph.py  worker.py  yaml_editor.py
