[project]
name = "midi-macro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.25.0",
    "mido>=1.3.0",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "python-rtmidi>=1.5.0",
    "pyyaml>=6.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]
