[project]
name = "midi-macro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.25.0",
    "mido>=1.3.0",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "python-rtmidi>=1.5.0",
    "pyyaml>=6.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]

[dependency-groups]
dev = [
    "mypy>=1.8.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
